🐛 fix (appointment): corregir filtros y respuesta paginada de citas
ajustar los filtros del listado, la estructura de PageResponse y la información de DoctorResponse, actualizando la lógica de consulta y sus pruebas.